@@ -2996,3 +2996,4 @@
 ( cvs diff -u -r 1.2.2.24 -r 1.2.2.25 src/gtk/inputdialog.c;  cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/gtk/inputdialog.h;  ) > 3.0.2cvs81.patchset
 ( cvs diff -u -r 1.61.2.74 -r 1.61.2.75 src/account.c;  cvs diff -u -r 1.23.2.26 -r 1.23.2.27 src/crash.c;  cvs diff -u -r 1.179.2.194 -r 1.179.2.195 src/imap.c;  cvs diff -u -r 1.149.2.83 -r 1.149.2.84 src/inc.c;  cvs diff -u -r 1.115.2.173 -r 1.115.2.174 src/main.c;  cvs diff -u -r 1.274.2.217 -r 1.274.2.218 src/mainwindow.c;  cvs diff -u -r 1.101.2.41 -r 1.101.2.42 src/news.c;  cvs diff -u -r 1.21.2.7 -r 1.21.2.8 src/news.h;  cvs diff -u -r 1.56.2.59 -r 1.56.2.60 src/pop.c;  cvs diff -u -r 1.17.2.20 -r 1.17.2.21 src/pop.h;  cvs diff -u -r 1.105.2.112 -r 1.105.2.113 src/prefs_account.c;  cvs diff -u -r 1.17.2.13 -r 1.17.2.14 src/recv.c;  cvs diff -u -r 1.6.12.7 -r 1.6.12.8 src/recv.h;  cvs diff -u -r 1.17.2.44 -r 1.17.2.45 src/send_message.c;  cvs diff -u -r 1.1.4.7 -r 1.1.4.8 src/send_message.h;  cvs diff -u -r 1.3.2.29 -r 1.3.2.30 src/ssl_manager.c;  cvs diff -u -r 1.2.2.7 -r 1.2.2.8 src/ssl_manager.h;  cvs diff -u -r 1.1.2.62 -r 1.1.2.63 src/wizard.c;  cvs diff -u -r 1.24.2.15 -r 1.24.2.16 src/common/Makefile.am;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/common/claws.c;  cvs diff -u -r -1.6.2.15 -r -1.6.2.16 src/common/nntp.c;  cvs diff -u -r -1.4.2.6 -r -1.4.2.7 src/common/nntp.h;  cvs diff -u -r 1.23.2.15 -r 1.23.2.16 src/common/session.c;  cvs diff -u -r 1.8.2.10 -r 1.8.2.11 src/common/session.h;  cvs diff -u -r 1.11.2.22 -r 1.11.2.23 src/common/smtp.c;  cvs diff -u -r 1.6.2.12 -r 1.6.2.13 src/common/smtp.h;  cvs diff -u -r 1.13.2.36 -r 1.13.2.37 src/common/socket.c;  cvs diff -u -r 1.13.2.16 -r 1.13.2.17 src/common/socket.h;  cvs diff -u -r 1.9.2.21 -r 1.9.2.22 src/common/ssl.c;  cvs diff -u -r 1.2.2.6 -r 1.2.2.7 src/common/ssl.h;  cvs diff -u -r 1.4.2.20 -r 1.4.2.21 src/common/ssl_certificate.c;  cvs diff -u -r 1.1.4.9 -r 1.1.4.10 src/common/ssl_certificate.h;  cvs diff -u -r 1.1.4.7 -r 1.1.4.8 src/etpan/Makefile.am;  cvs diff -u -r 1.1.4.6 -r 1.1.4.7 src/etpan/etpan-thread-manager-types.h;  cvs diff -u -r 1.1.4.8 -r 1.1.4.9 src/etpan/etpan-thread-manager.c;  cvs diff -u -r 1.1.4.87 -r 1.1.4.88 src/etpan/imap-thread.c;  diff -u /dev/null src/etpan/nntp-thread.c;  diff -u /dev/null src/etpan/nntp-thread.h;  cvs diff -u -r 1.4.2.53 -r 1.4.2.54 src/gtk/about.c;  cvs diff -u -r 1.9.2.18 -r 1.9.2.19 src/gtk/sslcertwindow.c;  cvs diff -u -r 1.6.2.8 -r 1.6.2.9 src/gtk/sslcertwindow.h;  ) > 3.0.2cvs82.patchset
 ( cvs diff -u -r 1.1.4.43 -r 1.1.4.44 src/prefs_filtering_action.c;  ) > 3.0.2cvs83.patchset
+( cvs diff -u -r 1.49.2.101 -r 1.49.2.102 src/procmime.c;  cvs diff -u -r 1.17.2.21 -r 1.17.2.22 src/procmime.h;  ) > 3.0.2cvs84.patchset
